Added About and Sign up sections to homepage

--- a/app/styles/scss/_bits.scss
+++ b/app/styles/scss/_bits.scss
@@ -3,7 +3,7 @@ $white: #FFF;
 $mainBlue: #2ca4da;
 $secondaryBlue: #135b75;
 $buttonOne: #cc6257;
-
+$transBlue: rgba(19,91,117,0.8);
 
 // Buttons
 .hollow-button {
