--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,3 +22,18 @@ body {
 
 //DO I NEED THIS????
 @import "scss/bootstrap-extras.scss";
+
+// .container {
+//   @include container-fixed;
+
+//   @media (min-width: $screen-sm-min) {
+//     width: $container-sm;
+//   }
+//   @media (min-width: $screen-md-min) {
+//     width: $container-md;
+//   }
+//   @media (min-width: $screen-lg-min) {
+//     width: $container-lg;
+//   }
+
+$screen-lg-min : 50px;  
