--- a/app/styles/scss/_typography.scss
+++ b/app/styles/scss/_typography.scss
@@ -18,7 +18,7 @@ h1 {
   font-family: quicksand-light;
 }
 
-h2,h3,h4,h5,p,li,a {
+h2,h3,h4,h5,p,li,a, input {
   font-family: 'Open Sans', sans-serif;
 }
 
