--- a/app/styles/scss/_home.scss
+++ b/app/styles/scss/_home.scss
@@ -101,22 +101,22 @@
     color: $white;
   }
   input {
-    background-color: transparent;
-    border: 2px solid $white;
-    border-radius: 15px;
-    padding:10px;
+    background-color: rgba(250,250,250,0.2);
+    border:none;
+    border-radius: 3px;
+    padding:15px;
     color: $white;
     margin: 10px 0;
-  }
-  input:nth-of-type(3) {
     width:50%;
-  }
+    font-size:16px;
+    text-align: center;
+
+}
+
   input[type="submit"] {
     background-color: $white;
     color: $mainBlue;
-    width:50%;
   }
-
   .container {
     z-index: 2;
     position: relative;
