made home page responsive

--- a/app/styles/scss/_bits.scss
+++ b/app/styles/scss/_bits.scss
@@ -21,3 +21,9 @@ $transBlue: rgba(19,91,117,0.8);
     transition: 0.3s all ease;
   }
 }
+
+$screen-xs: 480px !default;
+$screen-sm: 768px !default;
+$screen-md: 800px !default;
+$screen-lg: 1200px !default;
+
