--- a/app/styles/scss/_home.scss
+++ b/app/styles/scss/_home.scss
@@ -1,27 +1,70 @@
 #intro {
-    background:   
+  background:   
   linear-gradient($transBlue, $transBlue), 
   url('../images/home/intro-bg.jpg');
   background-size: cover;
+  
   .col-md-5 {
     text-align:right;
+    @media (max-width: $screen-md) {
+      width: 40%;
+      display:inline-block;
+    }
+    @media (max-width: $screen-xs) {
+      width: 100%;
+      display:inline-block;
+    }
+  }
+
+  .col-md-7 {
+    @media (max-width: $screen-md) {
+      width: 50%;
+      display:inline-block;
+    }
+    @media (max-width: $screen-xs) {
+      width: 100%;
+      display:inline-block;
+    }
   }
   svg {
     width:65%;
+    @media (max-width: $screen-xs) {
+      width: 50%;
+      position: absolute;
+      top: -100px;
+      left: 50%;
+      margin-left: -25%;
+      z-index: 1;
+    }
   }
   h1 {
     color: $white;
     font-size: 4.5em;
     margin-top: 10%;
+    letter-spacing: -0.4rem;
+    @media (max-width: $screen-xs) {
+      font-size:3.75em;
+      text-align: center;
+    }
+
   }
   .container {
     z-index: 2;
     position: relative;
-    padding: 10% 0;
+    padding-top: 10%;
+    padding-bottom: 10%;
   }
   .hollow-button {
     color: $white; 
     border:2px solid $white;
+    @media (max-width: $screen-xs) {
+      text-align: center;
+      display:block;
+      margin-left:20%;
+      margin-right:20%;
+      margin-bottom:33%;
+      margin-top:10%;
+    }
     &:hover {
       background-color: $white;
       color: $mainBlue;
@@ -33,8 +76,13 @@
 #markets {
   text-align: center;
   background-color: $white;
+  @media (max-width: $screen-xs) {
+    position: relative;
+    z-index: 2;
+  }
   .container {
-    padding:10% 0;
+    padding-top:10%;
+    padding-bottom:10%;
   }
   .col-md-4 {
     text-align: center;
@@ -48,9 +96,9 @@
 
 
 #about {
-    background:   
-     linear-gradient($transBlue, $transBlue), 
-     url('../images/home/about-bg.jpg');
+  background:   
+  linear-gradient($transBlue, $transBlue), 
+  url('../images/home/about-bg.jpg');
   background-size: cover;
   text-align:center;
 
@@ -62,10 +110,14 @@
   p {
     color: $white;
   }
+  svg {
+    width: 80%;
+  }
   .container {
     z-index: 2;
     position: relative;
-    padding: 10% 0;
+    padding-top: 10%;
+    padding-bottom: 10%;
   }
   .hollow-button {
     color: $white; 
@@ -79,6 +131,10 @@
 
 #moreabout {
   background-color: $white;
+  .container {
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
 } // END MORE ABOUT
 
 #values {
@@ -91,8 +147,8 @@
 
 #signup {
   background:   
-     linear-gradient($transBlue, $transBlue), 
-     url('../images/home/signup-bg.jpg');
+  linear-gradient($transBlue, $transBlue), 
+  url('../images/home/signup-bg.jpg');
   background-size: cover;
   padding: 10% 0;
   text-align: center;
@@ -105,13 +161,28 @@
     border:none;
     border-radius: 3px;
     padding:15px;
-    color: $white;
+    color: $mainBlue;
     margin: 10px 0;
     width:50%;
     font-size:16px;
     text-align: center;
+    transition: 0.5s ease;
+    outline: none;
+    @media (max-width: $screen-sm) {
+      width: 90%;
+      display:inline-block;
+    }
+    @media (max-width: $screen-xs) {
+      width: 100%;
+    }
+    
+    &:focus {
+      background-color: rgba(250,250,250,0.8);
+      transition: 0.5s ease;
+    }
 
-}
+  }
+
 
   input[type="submit"] {
     background-color: $white;
